# feagi

./: .coveragerc  .gitignore  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  DEPLOY_adv.md  Deployment_FAQ.md  GENOME.md  LIDAR_IPU.md  README.md  README.rst  doc_build.sh  feagi_configuration.ini  generate_version.sh  make_doc.sh  morphology_convert_into_modern.py  requirements.txt  setup.cfg  setup.py
agent/: feagi_interface.py  setup.cfg
agent/src/feagi_agent/: feagi_interface.py  retina.py
api_docs/: configuration.ini
community_genomes/: README.md  camera-interaction-genome-apostoli.json  essential_genome_modification.json
docker/: .env  Dockerfile  Dockerfile.private  README.md  apple_silicon_feagi.yml  base.Dockerfile  check_playground_images.py  docker-compose-feagi-influx-grafana-ros2-gazebo-godot.yml  docker-compose-feagi-influx-grafana.yml  docker-compose-feagi-micro_ros-no_db.yml  docker-compose-feagi-mongodb-gazebo.yml  docker-compose-feagi-ros-ign-VNC.yml  docker-compose-feagi-ros-ign-novnc.yml  docker-compose-feagi-ros-ign.yml  docker-compose-feagi-ros-influxdb.yml  docker-compose-feagi-ros-mongodb-influxdb.yml  docker-compose-feagi-ros-mongodb.yml  docker-compose-feagi-ros-no_db.yml  docker-compose-feagi-ros_serial-no_db.yml  docker-compose-godot-gazebo-ros2-VNC.yml  docker-compose-godot.yml  docker-compose.yml  feagi-OnlyGodot.yml  feagi-grafana.yml  feagi.html  feagi.private.yml  feagi.yml  feagi_apple_silicone.yml  low_res_feagi.yml  microbit_feagi.yml  playground.yml  pygame_docker.yml  run_private.bat  run_private.sh  run_private_grafana.bat  run_private_grafana.sh  test.txt  webcam_javascript.yml
docs/: Makefile  conf.old.py  conf.py  index.rst  modules.rst  src.edu.rst  src.evo.rst  src.rst
feagi_agent/: setup.cfg
peripherals/: README.md  setup.cfg
peripherals/feagi_agent/: configuration.py  feagi_interface.py  requirements.txt  retina.py  router.py  webcam.py
peripherals/feagi_agent_core/: README.md  setup.cfg
peripherals/feagi_agent_core/feagi_agent/: PIL_retina.py  actuators.py  configuration.py  feagi_interface.py  generate_version.sh  pns_gateway.py  retina.py  router.py  sensors.py  testing_mode.py  trainer.py  version.py
peripherals/feagi_agent_freenove/: README.md  refresh_for_upload.sh  setup.cfg
peripherals/feagi_agent_freenove/feagi_agent_freenove/: __main__.py  configuration.py  controller.py  requirements.txt  setup.sh  verify.sh
peripherals/feagi_agent_mycobot/: setup.cfg
peripherals/feagi_agent_mycobot/feagi_agent_mycobot/: __main__.py
peripherals/feagi_agent_mycobot/feagi_agent_mycobot/src/: configuration.py  mycobot.py
peripherals/feagi_agent_video_capture/: README.md
peripherals/feagi_agent_video_capture/feagi_agent_video_capture/: configuration.py  controller.py  requirements.txt
peripherals/feagi_agent_webcam/: README.md  setup.cfg
peripherals/feagi_agent_webcam/feagi_agent_webcam/: __main__.py  configuration.py  controller.py
peripherals/webcam/: webcam.py
src/: README.md  __init__.py  configuration.ini  configuration.py  (+8 more)
(+467 files in other folders)
