[metadata]
name = Neuraville
version = FA.0.0.1
author = Neuraville
author_email = info@neuraville.com
description = Feagi-agent to work with general and simulation robots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/feagi/feagi/tree/feature-refactor-vision/agent
project_urls =
  Bug Tracker = https://github.com/feagi/feagi/issues
classifiers =
  Programming Language :: Python :: 3
  License :: Apachoe-2.0
  All Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src