[metadata]
name = feagi_agent
version = 0.0.15
author = Neuraville LLC
author_email = info@neuraville.com
description = Feagi agent to work with general and simulation robots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/feagi/feagi/tree/feature-refactor-vision/agent
project_urls =
  Bug Tracker = https://github.com/feagi/feagi/issues
classifiers =
  Programming Language :: Python :: 3 :: Only
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent

[options]
package_dir =
  = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
