[metadata]
name = feagi_agent_mycobot
version = 0.0.3
author = Neuraville LLC
author_email = info@neuraville.com
description = Feagi agent mycobot to connect feagi with your cobot arm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/feagi/feagi
project_urls =
  Bug Tracker = https://github.com/feagi/feagi/issues
classifiers =
  Programming Language :: Python :: 3 :: Only
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent

[options]
package_dir =
  = .
packages = find:
python_requires = >=3.6
install_requires =
    feagi_agent
    zmq>=0.0.0; python_version<"3.8"

[options.packages.find]
where = .

[options.package_data]
feagi_agent_mycobot =
    CMakeLists.txt
    package.xml
    setup.cfg
    setup.py
    start_mycobot.sh
